--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "suppressImplicitAnyIndexErrors": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.jsx", "pages/test.jsx", "components/cart/OrderSummaryBox.jsx"],
   "exclude": ["node_modules"]
 }
