--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.29.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/js-cookie": "^3.0.2",
@@ -27,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.2.3",
     "next": "12.1.6",
     "next-connect": "^0.12.2",
     "next-sanity-image": "^3.2.1",
@@ -43,6 +45,7 @@
     "react-star-rating-component": "^1.4.1",
     "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
+    "sendgrid": "^5.2.3",
     "slick-carousel": "^1.8.1",
     "stripe": "^9.1.0",
     "url-loader": "^4.1.1"
